// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Instructions component should match the snapshot 1`] = `
<main
  className="instructions"
>
  <Header />
  <section>
    <p />
  </section>
</main>
`;

exports[`Instructions component should match the snapshot 2`] = `
<main
  className="instructions"
>
  <Header />
  <section>
    <Redirect
      to="/round-one"
    />
  </section>
</main>
`;
